--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "homepage": "https://github.com/louis-phhh/louis-my-link#readme",
   "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/config": "^0.0.41",
+    "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.182",
+    "@types/nanoid-dictionary": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.16.0",
@@ -29,5 +34,21 @@
     "rimraf": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "config": "^3.3.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^5.1.0",
+    "joi": "^17.6.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.3.4",
+    "nanoid": "^3.3.4",
+    "nanoid-dictionary": "^4.3.0",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1"
   }
 }
