--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^5.1.0",
+    "inversify": "^6.0.1",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.4",
     "nanoid": "^3.3.4",
     "nanoid-dictionary": "^4.3.0",
+    "reflect-metadata": "^0.1.13",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
   }
