--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rimraf build && tsc",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --fix --ext .ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "watchcss": "npx tailwindcss -i ./src/public/css/tailwind.css -o ./src/public/css/styles.css --watch --minify"
   },
   "repository": {
     "type": "git",
@@ -36,12 +37,15 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "tailwindcss": "^3.0.24",
     "compression": "^1.7.4",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-handlebars": "^6.0.6",
+    "express-handlebars-sections": "^1.0.1",
     "helmet": "^5.1.0",
     "inversify": "^6.0.1",
     "joi": "^17.6.0",
