--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "link shortener",
   "main": "build/main.js",
   "author": "Louis Phan <louis.phhh@gmail.com>",
+  "engines": {
+    "node": "16.13.2"
+  },
   "scripts": {
     "start:dev": "ts-node-dev --respawn --pretty --transpile-only src/main",
+    "start": "node build/main",
     "build": "rimraf build && tsc",
+    "postinstall": "npm run build",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --fix --ext .ts",
     "prepare": "husky install",
@@ -25,6 +30,7 @@
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/config": "^0.0.41",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/nanoid-dictionary": "^4.2.0",
@@ -37,7 +43,6 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "tailwindcss": "^3.0.24",
     "compression": "^1.7.4",
     "config": "^3.3.7",
     "cors": "^2.8.5",
@@ -54,6 +59,7 @@
     "nanoid": "^3.3.4",
     "nanoid-dictionary": "^4.3.0",
     "reflect-metadata": "^0.1.13",
+    "tailwindcss": "^3.0.24",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
   }
